--- a/css/creative.css
+++ b/css/creative.css
@@ -136,7 +136,9 @@ img::-moz-selection {
 @media (min-width: 992px) {
   #mainNav {
     border-color: transparent;
-    background-color: transparent;
+    /* background-color: transparent; */
+    background-color: rgb(0, 0, 0,0.4);
+
   }
   #mainNav .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
@@ -318,3 +320,4 @@ header.masthead p {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
 }
+
